--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ p {
     right: 20%;
 }
 
-
+/* mobile view */
 @media (max-width: 767px) {
     .hero-container {
         position: static;
@@ -85,4 +85,22 @@ p {
         font-size: clamp(1rem, 3vw, 1.5rem);
     }
 
+}
+
+
+/* fix landscape phone and tablet */
+@media (orientation: landscape) and (max-height: 600px) {
+    .hero-container {
+        text-align: center;
+        margin: 20vh auto 0 auto;
+        width: 90%;
+    }
+
+    h1 {
+        font-size: clamp(1.5rem, 5vw, 3rem);
+    }
+
+    p {
+        font-size: clamp(0.9rem, 2vw, 1.3rem);
+    }
 }
