--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,11 @@ p {
     border-bottom: 1px solid #969696;
     text-decoration: none;
     cursor: pointer;
-    font: inherit;
-    transition: color 0.3s;
+    font-family: "Host Grotesk", serif;
+    font-weight: 425;
+    font-style: normal;
+    font-size: 1.5vw;
+    transition: color 0.3s, border-color 0.3s;
 }
 
 .link-button:hover {
@@ -92,15 +95,16 @@ p {
 @media (orientation: landscape) and (max-height: 600px) {
     .hero-container {
         text-align: center;
-        margin: 20vh auto 0 auto;
+        margin: 10svh auto 0 auto;
         width: 90%;
     }
 
     h1 {
-        font-size: clamp(1.5rem, 5vw, 3rem);
+        font-size: clamp(1.4rem, 4.5vw, 3rem);
     }
 
     p {
         font-size: clamp(0.9rem, 2vw, 1.3rem);
+        margin-top: 0.6rem;
     }
 }
