--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ p {
     text-align: center;
     width: 90%;
     margin: 20dvh auto 0 auto;
-}
+    }
     
     h1 {
         font-size: clamp(2rem, 12vw, 4.5rem);
@@ -95,9 +95,14 @@ p {
 /* fix landscape phone and tablet */
 @media (orientation: landscape) and (max-height: 600px) {
     .hero-container {
+        position: relative;
         text-align: center;
-        margin: 10svh auto 0 auto;
-        width: 90%;
+        margin: 0;
+        width: 100%;
+        height: 100svh; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     h1 {
@@ -106,6 +111,6 @@ p {
 
     p {
         font-size: clamp(0.9rem, 2vw, 1.3rem);
-        margin-top: 0.6rem;
+        margin-top: 0.5rem;
     }
 }
