--- a/css/style.css
+++ b/css/style.css
@@ -67,35 +67,24 @@ p {
 
 .hero-container {
     position: absolute;
-    text-align: right;
     top: 30%;
     right: 20%;
+    text-align: right;
 }
 
-/* mobile */
+/* MOBILE FIX */
 @media (max-width: 767px) {
     .hero-container {
         position: relative;
+        right: auto;
+        top: auto;
+        margin: 20vh auto 0 auto;
         width: 90%;
-        margin: 20dvh auto 0 auto;
         text-align: center;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-    }
-
-    .hero-container > * {
-        display: block;
-        margin: 0.5em auto;
-    }
-
-    h1 {
-        font-size: clamp(2rem, 12vw, 4.5rem);
-    }
-
-    p {
-        font-size: clamp(1rem, 3vw, 1.5rem);
+        justify-content: center;
     }
 }
 
